<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context="jose.museonfc.ActualizarNfc">

    <EditText
        android:id="@+id/nfc_nombre_act"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nfc_nombre"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="56dp" />

    <EditText
        android:id="@+id/nfc_autor_act"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nfc_autor"
        android:layout_below="@+id/nfc_nombre_act"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:id="@+id/nfc_tipo_act"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nfc_tipo"
        android:layout_below="@+id/nfc_autor_act"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/nfc_estilo_act"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nfc_estilo"
        android:layout_below="@+id/nfc_tipo_act"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


    <Button
        android:id="@+id/btn_act"
        android:layout_width="354dp"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="Actualizar/Eliminar NFC"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="98dp" />



</RelativeLayout>
