<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/principal"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:weightSum="1">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:layout_weight="0.2" />

    <LinearLayout
        android:id="@+id/layout_serie"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="true"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/lbl_serie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="2sp"
            android:paddingRight="2sp"
            android:text="@string/label_Serie"
            android:textSize="17sp" />



        <TextView
            android:id="@+id/act_serie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="14"
            android:textSize="17sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_nombre"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="true"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/lbl_nombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="2sp"
            android:paddingRight="2sp"
            android:text="@string/label_nombre"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/act_nombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="14"
            android:textSize="17sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_autor"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="true"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/lbl_autor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="2sp"
            android:paddingRight="2sp"
            android:text="@string/label_autor"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/act_autir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="14"
            android:textSize="17sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_tipo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="true"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/lbl_tipo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="2sp"
            android:paddingRight="2sp"
            android:text="@string/label_tipo"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/act_tipo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="14"
            android:textSize="17sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_estilo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="true"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/lbl_estilo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="2sp"
            android:paddingRight="2sp"
            android:text="@string/label_estilo"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/act_estilo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="14"
            android:textSize="17sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_creacion"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="true"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/lbl_creacion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="2sp"
            android:paddingRight="2sp"
            android:text="@string/label_creacion"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/act_creacion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="14"
            android:textSize="17sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_nacion"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="true"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/lbl_nacion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="2sp"
            android:paddingRight="2sp"
            android:text="@string/label_nacionalidad"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/act_nacion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="14"
            android:textSize="17sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_ingreso"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="true"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/lbl_ingreso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="2sp"
            android:paddingRight="2sp"
            android:text="@string/label_ingreso"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/act_ingreso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="14"
            android:textSize="17sp" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:layout_weight="0.49" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Actualizar"
        android:id="@+id/btn_actualizar" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Eliminar"
        android:id="@+id/btn_eliminar" />

</LinearLayout>
