<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context="jose.museonfc.ingreso">


    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinnerObras" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Ingresar Fecha de Ingreso"
        android:id="@+id/btn_fecha1"
        android:layout_below="@+id/linea_2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/txt_fecha_creacion"
        android:layout_alignEnd="@+id/txt_fecha_creacion" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_fecha_creacion"
        android:layout_alignParentStart="true"
        android:hint="@string/sql_ingreso"
        android:layout_below="@+id/btn_fecha1"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/linea_2"
        android:layout_alignEnd="@+id/linea_2" />

    <View
        android:id="@+id/linea_1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#aa5f5f5f"
        android:layout_below="@+id/txt_nacionalidad"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:id="@+id/txt_nacionalidad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/sql_nacionalidad"
        android:layout_below="@+id/spinnerObras"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <View
        android:id="@+id/linea_2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#aa5f5f5f"
        android:layout_below="@+id/txt_fecha_ingreso"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Ingresar Fecha de Creacion"
        android:id="@+id/btn_fecha2"
        android:layout_below="@+id/linea_1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/linea_1"
        android:layout_alignEnd="@+id/linea_1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_fecha_ingreso"
        android:hint="@string/sql_fecha"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/btn_fecha2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Guardar Informacion"
        android:id="@+id/btn_guardar"
        android:layout_below="@+id/txt_fecha_creacion"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="40dp"
        android:layout_alignRight="@+id/linea_2"
        android:layout_alignEnd="@+id/linea_2" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Ver Información"
        android:id="@+id/btn_lista"
        android:layout_below="@+id/btn_guardar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/btn_guardar"
        android:layout_alignEnd="@+id/btn_guardar" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Retorno a pantalla principal"
        android:id="@+id/btn_inicio"
        android:layout_below="@+id/btn_lista"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/btn_lista"
        android:layout_alignEnd="@+id/btn_lista" />


</RelativeLayout>
